--- a/netlify.toml
+++ b/netlify.toml
@@ -13,52 +13,78 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    X-Robots-Tag = "index, follow, max-snippet:-1, max-image-preview:large"
+
+# HTML Cache
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=3600"
 
 # Cache static assets
 [[headers]]
-  for = "*.css"
+  for = "/*.css"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+    Content-Type = "text/css; charset=utf-8"
 
 [[headers]]
-  for = "*.js"
+  for = "/*.js"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+    Content-Type = "application/javascript; charset=utf-8"
 
 [[headers]]
-  for = "*.png"
+  for = "/*.png"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+    Content-Type = "image/png"
 
 [[headers]]
-  for = "*.jpg"
+  for = "/*.jpg"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+    Content-Type = "image/jpeg"
 
 [[headers]]
-  for = "*.ico"
+  for = "/*.ico"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+    Content-Type = "image/x-icon"
 
-# Sitemap header
+[[headers]]
+  for = "/*.svg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+    Content-Type = "image/svg+xml; charset=utf-8"
+
+# Sitemap header - ensure proper content type for Google
 [[headers]]
   for = "/sitemap.xml"
   [headers.values]
-    Content-Type = "application/xml"
-    Cache-Control = "public, max-age=86400"
+    Content-Type = "application/xml; charset=utf-8"
+    Cache-Control = "public, max-age=3600"
+    X-Robots-Tag = "noindex"
 
 # RSS header
 [[headers]]
   for = "/rss.xml"
   [headers.values]
-    Content-Type = "application/rss+xml"
+    Content-Type = "application/rss+xml; charset=utf-8"
     Cache-Control = "public, max-age=3600"
 
 # Robots.txt header
 [[headers]]
   for = "/robots.txt"
   [headers.values]
-    Content-Type = "text/plain"
+    Content-Type = "text/plain; charset=utf-8"
+    Cache-Control = "public, max-age=86400"
+
+# Manifest
+[[headers]]
+  for = "/manifest.json"
+  [headers.values]
+    Content-Type = "application/manifest+json; charset=utf-8"
     Cache-Control = "public, max-age=86400"
 
 # SEO-friendly redirects
@@ -74,6 +100,11 @@
 
 [[redirects]]
   from = "/bmi-calculator"
+  to = "/"
+  status = 301
+
+[[redirects]]
+  from = "/index"
   to = "/"
   status = 301
 
